# PatrinRoman_QAP23-onl_PracticeTasks

./: README.md  homework_ex_2.py  homework_ex_3.py  homework_ex_4.py  homework_ex_7.py  homework_ex_8.py  homework_ex_9.py  hw4_main.py  hw4_maths_utils.py  lesson_1203.py  pyproject.toml
AQA hometasks/: homework_ex_4.py  homework_ex_6.py  homework_ex_9.py
AQA hometasks/homework_5/: homework_ex_5_2.py  homework_ex_5_3.py  homework_ex_5_5.py
homework_5/: homework_ex_5_1.py  hw5_file_utils.py  hw5_main.py  test_file.txt
tests/: test_hw_18.py  test_hw_20.py  test_selen_practice.py
