[project]
name = "patrinroman-qap23-onl-practicetasks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest>=9.0.3",
    "ruff>=0.15.5",
    "selenium>=4.43.0",
    "webdriver-manager>=4.0.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
